Otimização e adição de componentes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Dannhz</h1>
             <h2>Programador, Web Designer.</h2>
             <div class="redes_icons">
-                <a href="http://linkedin.com/in/danilo-barreto-767919179" target="_blank">
+                <a href="http://linkedin.com/in/danilo-caetano" target="_blank">
                     <div class="redes_icon">
                         <img src="imgs/icons/linkedin.png" alt="Linkedin Icon">
                     </div>
@@ -52,6 +52,9 @@
                         <img src="imgs/icons/github.png" alt="GitHub Icon">
                     </div>
                 </a>
+            </div>
+            <div class="cv">
+                <a href="#">Meu currículo</a>
             </div>
         </div>
     </header>
@@ -349,6 +352,7 @@
                     <h3>Informática/Web Design/Hardware</h3>
                     <p class="modal_fechar">X</p>
                 </div>
+                <p class="modal_local">Microlins - Cangaíba</p>
                 <p>
                     Minha primeira experiência, principalmente em design, como estudante foi em cursos
                     profissionalizantes da Microlins - Unidade Cangaíba que realizei durante a época de meu ensino fundamental. Antes disso eu
@@ -361,9 +365,10 @@
         <div class="modal" id="modal2">
             <div class="modal_conteudo">
                 <div class="modal_header">
-                    <h3>Análise Desenvolvimento de Sistemas</h3>
+                    <h3>Análise e Desenvolvimento de Sistemas</h3>
                     <p class="modal_fechar">X</p>
-                </div>
+                </div>  
+                <p class="modal_local">Universidade Paulista - Tatuapé</p>
                 <p>
                     Cursei tecnólogo em Análise e Des. de Sistemas logo após o término do ensino médio, 
                     onde me adaptei a trabalhar principalmente em ambiente Microsoft.
@@ -381,12 +386,39 @@
                     <h3>Técnico em Mecatrônica</h3>
                     <p class="modal_fechar">X</p>
                 </div>
+                <p class="modal_local">Etec Martin Luther King</p>
                 <p>
                     Cursei Mecatrônica paralelamente com a faculdade para aprimorar meus conhecimentos em tecnologia.
                     Durante este período, recebi premiações pela criatividade em projetos e por 
                     <a href="http://www.gazetavirtual.com.br/alunos-de-etec-do-tatuape-sao-premiados-no-curso-de-mecatronica/" target="_blank">ilustrações técnicas feitas na ferramenta AutoCAD</a>, 
                     além de despertar meu interesse em Sistemas Embarcados.
                 </p>
+                <div class="modal_midia">
+                    <figure>
+                        <img src="imgs/trajetoria/Mlk2.JPG" alt="" width="100%">
+                        <figcaption>Premiação pela ilustração técnica de temática "Caminhão Scania",
+                            o qual também presenteamos à equipe CODEMA com nossas ilustrações impressas.
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="modal_midia">
+                    <figure>
+                        <img src="imgs/trajetoria/Mlk3.png" alt="" width="100%">
+                        <figcaption>Desenho técnico Isométrico de um caminhão Scania feito em AutoCAD</figcaption>
+                    </figure>
+                </div>
+                <p>
+                    Gosto de citar um projeto que minha equipe fez em uma competição de veículo de controle remoto pelo arduino,
+                    o qual desenvolvemos um software para Android feito em Java pelo Android Studio, o qual estabelecia a conexão ao microcontrolador
+                    e enviava sinais baseado em seu acelerômetro, permitindo assim que o veículo fosse controlado apenas a partir de gestos 
+                    do braço.
+                </p>
+                <div class="modal_midia">
+                    <video width="43%" controls>
+                        <source src="imgs/trajetoria/Mlk1.mp4" type="video/mp4">
+                    </video>
+                    <img src="imgs/trajetoria/Mlk4.png" alt="" width="43%">
+                </div>
             </div>
         </div>
 
@@ -396,6 +428,7 @@
                     <h3>Técnico em Desenvolvimento de Sistemas</h3>
                     <p class="modal_fechar">X</p>
                 </div>
+                <p class="modal_local">Etec Prof. Aprígio Gonzaga</p>
                 <p>
                     Optei por fazer este curso para aprimorar meu conhecimento em Desenvolvimento Web.
                     Lá, fui representante de turma, liderando junto com colegas o projeto de turma
