Otimização de scroll, inserção de CV e mais detalhes em Trajetória

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name= 'description' content='Perfil de Dannhz - Programador e Designer'/>
-
     <meta property='og:type' content='website'/>
     <meta property= 'og:description' content='Perfil de Dannhz - Programador e Designer'/>
     <meta property='og:title' content='Perfil de Dannhz - Programador e Designer'/>
@@ -54,7 +53,7 @@
                 </a>
             </div>
             <div class="cv">
-                <a href="#">Meu currículo</a>
+                <a href="cv.html">Meu currículo</a>
             </div>
         </div>
     </header>
@@ -107,12 +106,17 @@
                 <header>
                     <h3>Conhecimentos</h3>
                 </header>
-                <p>Aqui exponho meus conhecimentos específicos de softwares e ferramentas dos quais uso ou já usei com frequência para a solução de problemas, principalmente, como aluno nas etecs e faculdade entre os anos de 2018 até agora.</p>
+                <p>
+                    Aqui exponho meus conhecimentos específicos de softwares e ferramentas 
+                    dos quais uso ou já usei com frequência para a solução de problemas, principalmente, 
+                    como aluno nas etecs e faculdade entre os anos de 2018 até agora.</p>
             </div>
             <div class="conhecimentos_img">
                 <div class="layerMoon1" id="moonLight"></div>
                 <div class="layerMoon2"></div>
                 <div class="layerMoon3" id="moon"></div>
+                <div class="layerMoon4"></div>
+
 
             </div>
 
@@ -377,6 +381,24 @@
                     mais bem avaliados da turma pela existência de opções de acessibilidade e design diferenciado.
                     (fora do padrão Windows Form). 
                 </p>
+                <div class="modal_midia">
+                    <figure>
+                        <img src="imgs/trajetoria/ads2.png" alt="" width="100%">
+                        <figcaption>Tela de início de um Sistema de locação de automóveis que desenvolvi junto à meu grupo em nosso Projeto 
+                            Integrado Multidisciplinar-II, o qual considero meu primeiro projeto como desenvolvedor 
+                            (e, olhando atualmente, percebo que estava repleto de bugs).
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="imgs/trajetoria/ads1.png" alt="" width="100%">
+                        <figcaption>Tela de início da minha solução para o Projeto Integrado Multidisciplinar-IV, 
+                            um Software de Help Desk feito em C# - Windows Form.
+                            Fui majoritariamente responsável pelo front e back-end do Software Desktop. Este foi o primeiro software 
+                            que prototipei 100% no Photoshop, e busquei ao máximo fugir do layout padrão windows-form e focando na experiência do usuário,
+                            com funções de acessibilidade e personalização.
+                        </figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
 
@@ -397,7 +419,7 @@
                     <figure>
                         <img src="imgs/trajetoria/Mlk2.JPG" alt="" width="100%">
                         <figcaption>Premiação pela ilustração técnica de temática "Caminhão Scania",
-                            o qual também presenteamos à equipe CODEMA com nossas ilustrações impressas.
+                            o qual também presenteamos a equipe CODEMA com nossas ilustrações impressas.
                         </figcaption>
                     </figure>
                 </div>
@@ -408,8 +430,9 @@
                     </figure>
                 </div>
                 <p>
-                    Gosto de citar um projeto que minha equipe fez em uma competição de veículo de controle remoto pelo arduino,
-                    o qual desenvolvemos um software para Android feito em Java pelo Android Studio, o qual estabelecia a conexão ao microcontrolador
+                    Gosto de citar um projeto que minha equipe fez em uma competição de carrinho de controle remoto pelo arduino
+                    que a Etec promove. Nele, optamos por desenvolver um software para servir de controle, 
+                    feito em Java para Android no Android Studio, o qual estabelecia a conexão ao microcontrolador
                     e enviava sinais baseado em seu acelerômetro, permitindo assim que o veículo fosse controlado apenas a partir de gestos 
                     do braço.
                 </p>
@@ -450,7 +473,7 @@
             </nav>
             <p class="footer_sobre">Saiba mais sobre em minhas redes:</p>
             <div class="redes_icons">
-                <a href="http://linkedin.com/in/danilo-barreto-767919179" target="_blank">
+                <a href="http://linkedin.com/in/danilo-caetano" target="_blank">
                     <div class="redes_icon">
                         <img src="imgs/icons/linkedin.png" alt="Linkedin Icon">
                     </div>
@@ -469,10 +492,8 @@
         </div>
         <div class="footer_bottom">
             <p>2021. Design por <b>Dannhz - Danilo Barreto</b></p>
-
         </div>
     </footer>
     <script src="js/script.js"></script>
-
 </body>
 </html>
