Correções, inclusão do portfolio e favicon

--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,7 @@
     <meta property='og:title' content='Danilo Caetano - Currículo'/>
     <meta property='og:image' content='//dannhz.github.io/imgs/og_cv.jpg'/>
     <meta property='og:url' content='//dannhz.github.io/cv/'/>
+    <link rel="sortcut icon" href="imgs/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/cv.css">
@@ -58,7 +59,7 @@
                 <ul>
                     <li class="habilidade_texto">Trabalho em Equipe</li>
                     <li class="habilidade_texto">Dedicado</li>
-                    <li class="habilidade_texto">Autônomo</li>
+                    <li class="habilidade_texto">Responsável</li>
                     <li class="habilidade_texto">Criativo</li>
                 </ul>
             </div>
@@ -100,7 +101,7 @@
                         <div class="topico"></div>
                         <p class="topico_titulo">Tecnólogo em Análise e Des. de Sistemas</p>
                         <p class="topico_detalhe">Universidade Paulista- Campus Tatuapé</p>
-                        <p class="topico_detalhe">jan/2017 - Dez/2019</p>
+                        <p class="topico_detalhe">jan/2018 - Dez/2019</p>
 
                     </li>
                     <li>
