Implementações/modificações adicionais

--- a/cv.html
+++ b/cv.html
@@ -47,7 +47,7 @@
 
                 <h3>Contato</h3>
                 <ul>
-                    <li><div class="contato_icon email"></div><p> danilocaetanobarreto@gmail.com</p></li>
+                    <li><div class="contato_icon email"></div><p> me.dann010@gmail.com</p></li>
                     <li><div class="contato_icon site"></div><p>dannhz.github.io</p></li>
                     <li><div class="contato_icon cel"></div><p>(11) 98799-4823</p></li>
                     <li><div class="contato_icon linkedin"></div><p>linkedin.com/in/danilo-caetano</p></li>
