--- a/index.html
+++ b/index.html
@@ -297,9 +297,25 @@
             <header>
                 <h3>Portfolio</h3>
             </header>
-            <p>Blender</p>
+            <p>Ilustrações</p>
 
             <div class="portfolio_container" id="portfolio_blender">
+                <div class="blender_thumb">
+                    <div class="blender_pic" id="kawaki">
+                        <div class="icon_overlay">
+                            <p>Kawaki</p>
+                        </div>
+                    </div>
+                    <div class="artstation_info">
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
+                        </div>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
+                        </div>
+                    </div>
+                </div>
                 <div class="blender_thumb">
                     <div class="blender_pic" id="delta">
                         <div class="icon_overlay">
@@ -307,13 +323,12 @@
                         </div>
                     </div>
                     <div class="artstation_info">
-                        <div class="artstation_views">
-                            <img src="imgs/icons/eye2.svg" alt="">
-                            <p>36</p>
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
                         </div>
-                        <div class="artstation_likes">
-                            <img src="imgs/icons/like.svg" alt="">
-                            <p>2</p>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
                         </div>
                     </div>
                 </div>
@@ -324,13 +339,12 @@
                         </div>
                     </div>
                     <div class="artstation_info">
-                        <div class="artstation_views">
-                            <img src="imgs/icons/eye2.svg" alt="">
-                            <p>39</p>
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
                         </div>
-                        <div class="artstation_likes">
-                            <img src="imgs/icons/like.svg" alt="">
-                            <p>1</p>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
                         </div>
                     </div>
                 </div>
@@ -341,13 +355,12 @@
                         </div>
                     </div>
                     <div class="artstation_info">
-                        <div class="artstation_views">
-                            <img src="imgs/icons/eye2.svg" alt="">
-                            <p>39</p>
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
                         </div>
-                        <div class="artstation_likes">
-                            <img src="imgs/icons/like.svg" alt="">
-                            <p>1</p>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
                         </div>
                     </div>
                 </div>
@@ -358,30 +371,28 @@
                         </div>
                     </div>
                     <div class="artstation_info">
-                        <div class="artstation_views">
-                            <img src="imgs/icons/eye2.svg" alt="">
-                            <p>52</p>
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
                         </div>
-                        <div class="artstation_likes">
-                            <img src="imgs/icons/like.svg" alt="">
-                            <p>1</p>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
                         </div>
                     </div>
                 </div>
                 <div class="blender_thumb">
-                    <div class="blender_pic" id="qilby">
+                    <div class="blender_pic" id="qilby">                        
                         <div class="icon_overlay">
                             <p>Qilby</p>
                         </div>
                     </div>
                     <div class="artstation_info">
-                        <div class="artstation_views">
-                            <img src="imgs/icons/eye2.svg" alt="">
-                            <p>55</p>
+                        <div class="artstation_data">
+                            <p>22/08/2021</p>
                         </div>
-                        <div class="artstation_likes">
-                            <img src="imgs/icons/like.svg" alt="">
-                            <p>2</p>
+                        <div class="artstation_tools">
+                            <img src="imgs/icons/blender.png" alt="">
+                            <img src="imgs/icons/photoshop.png" alt="">      
                         </div>
                     </div>
                 </div>
